some problems with alignment are solved

--- a/05-lection3/02-modal/index.css
+++ b/05-lection3/02-modal/index.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    margin: 10px;
     display: flex;
     flex-direction: row;
     height: 100%;
