--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -1,7 +1,6 @@
-.button {
+.button__primary {
     border: none;
     outline: none;
-
     display: inline-block;
     border-radius: 8px;
     padding: 15px 20px 14px;
@@ -11,67 +10,44 @@
     font-weight: 500;
     cursor: pointer;
     min-width: 189px;
-}
-
-.button_primary {
     background: #4263EB;
     color: #FFFFFF;
-
     transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
 }
 
-.button_primary:hover {
+.button__primary:hover {
     background: #2342C0;
 }
 
 .information {
+    position: fixed;
     display: flex;
-    width: 50%;
-    height: 84%;
+    width: 60vw;
+    height: 100vh;
     align-items: center;
     justify-content: center;
-    margin-left: 54px;
+    margin: 35px 35px 34px 30vw;
     background: #C4C4C4;
 }
 
-.information__bckg {
-    height: 84%;
-    width: 94%;
-
-
-    align-items: center;
-    justify-content: center;
-}
-
 .information__modal {
-    width: 84%;
-    height: 77%;
+    max-width: 428px;
+    padding: 40px 40px 47px 40px;
     background: var(--white);
     border-radius: 8px;
     display: none;
     flex-direction: column;
-    position: relative;
+    position: absolute;
 }
 
 .information__cross {
     position: absolute;
-    right: 0;
-    top: 0;
-    width: 9.33px;
-    height: 9.33px;
+    cursor: pointer;
+    right: 15.33px;
+    top: 15.33px;
+    width: 15px;
+    height: 15px;
     background: transparent;
-    margin-top: 15.33px;
-    margin-right: 15.33px;
-}
-
-.information__cross span {
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    background: #495057;
-    border-radius: 20px;
-    left: 0;
-    transition: all .5s ease;
 }
 
 .information__cross span:first-child {
@@ -93,7 +69,7 @@
 
 .information__modal .information__text {
     position: relative;
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
